# nimbleSDK

./: .gitignore  CMakeLists.txt  CODEOWNERS  NimbleSDKWiki.md  README.md  build.sh  buildServer.sh  main.cpp  setup.sh
.github/workflows/: unittest.yml
android/: CMakeLists.txt
android/include/: client.h
android/src/: client.cpp
commonclient/include/: CommonClient.h
linux/: CMakeLists.txt
linux/include/: client.h
linux/src/: client.cpp
nimblenet/: CMakeLists.txt
nimblenet/CommandCenter/include/: CommandCenter.h  CommandCenterStructs.h
nimblenet/CommandCenter/src/: CommandCenter.cpp
nimblenet/ConfigManager/include/: ConfigManager.h
nimblenet/ConfigManager/src/: ConfigManager.cpp
nimblenet/Executors/onnx/include/: Executor.h  ExecutorStructs.h  ONNXExecutorStructs.h
nimblenet/Executors/onnx/src/: ONNXExecutor.cpp  ONNXExecutorStructs.cpp
nimblenet/Executors/pytorch/include/: Executor.h
nimblenet/Executors/pytorch/src/: pytorchTrainer.cpp
nimblenet/FeatureStore/include/: FeatureStore.h
nimblenet/FeatureStore/src/: FeatureStore.cpp
nimblenet/NativeInterface/include/: NativeInterface.h  NativeInterfaceStructs.h
nimblenet/NativeInterface/src/: NativeInterface.cpp
nimblenet/ResourceManager/include/: ResourceManager.h  ResourceManagerStructs.h
nimblenet/ResourceManager/src/: ResourceManager.cpp  ResourceManagerStructs.cpp
nimblenet/ServerAPI/: CMakeLists.txt
nimblenet/ServerAPI/include/: ServerAPI.h  ServerAPIStructs.h
nimblenet/ServerAPI/src/: ServerAPI.cpp  ServerAPIStructs.cpp
nimblenet/UserEvents/AggregateColumn/include/: AggregateColumn.h  AverageColumn.h  CountColumn.h  MaxColumn.h  MinColumn.h  SumColumn.h
nimblenet/UserEvents/AggregateColumn/src/: AverageColumn.cpp  CountColumn.cpp  MaxColumn.cpp  MinColumn.cpp  SumColumn.cpp
nimblenet/UserEvents/PreProcessor/include/: PreProcessor.h
nimblenet/UserEvents/PreProcessor/src/: PreProcessor.cpp
nimblenet/UserEvents/RollingWindow/include/: RollingWindow.h  TimeBasedRollingWindow.h
nimblenet/UserEvents/RollingWindow/src/: RollingWindow.cpp  TimeBasedRollingWindow.cpp
nimblenet/UserEvents/TableStore/include/: TableStore.h
nimblenet/UserEvents/TableStore/src/: TableStore.cpp
nimblenet/UserEvents/UserEventsManager/include/: UserEventsManager.h  UserEventsStruct.h
nimblenet/UserEvents/UserEventsManager/src/: UserEventsManager.cpp  UserEventsStruct.cpp
nimblenet/nimblenet/include/: crossPlatformUtil.h  nimblenet.h
nimblenet/nimblenet/src/: nimblenet.cpp
nimblenet/util/include/: Logger.h  base64.h  json.h  nlohmann_json.h  onnx.h  util.h
nimblenet/util/src/: Logger.cpp  base64.cpp  json.cpp
scripts/: secretGenerator.cpp
scripts/tests/: CMakeLists.txt  ONNXModelTest.cpp
